# Jellylogin

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
jellyfin-plugin/: JellyLoginAuthProvider.cs  JellyLoginPlugin.csproj  Plugin.cs  PluginConfiguration.cs  PluginServiceRegistrator.cs  build.ps1  build.sh  meta.json
jellyfin-plugin/Configuration/: configPage.html
jellylogin/: admin.py  api.py  app.py  auth.py  jellyfin.py  models.py  security.py
jellylogin/static/css/: app.css
jellylogin/static/js/: app.js
jellylogin/templates/: base.html  dashboard.html  error.html  login.html  setup.html
jellylogin/templates/admin/: _announcement_form.html  _link_form.html  announcements.html  index.html  jellyfin.html  layout.html  links.html  login_design.html  settings.html  users.html
